Fix Alignment for radio and sensors drag and drop

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@
     top: 30px;
     line-height: 50px; }
     div.droppable_item {
-    width: 85px;
+    width: 63px;
     height: 125px;
     background: #fff;
     border: 5px solid #ccc;
